--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -376,7 +376,7 @@
                                      value="#{boton['submit']}"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"
-                                     styleClass="boton-enviar"/>
+                                     styleClass="boton-enviar boton-gral2"/>
                 </h:form>
 <!--                Version para Moviles-->
                 <h:form styleClass="contenedor-formularios uk-hidden@m">
