--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -128,13 +128,15 @@
                             </h:inputTextarea>
                             <h:message for="cuatro" styleClass=""/>
                         </div>
+
                         <h:commandButton id="boton-enviar-mapa-mental-escritorio"
                                          value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          action="#{mapaMentalControlador.respondeMapaMental}"
-                                         styleClass="boton-enviar"/>
+                                         styleClass="boton-enviar boton-gral"/>
                     </h:form>
                 </div>
+
                 <div class="uk-hidden@m">
                     <h:form id="formulario--mapamental-m">
                         <div class="small-14-uno">
@@ -176,7 +178,8 @@
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
                                          value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                         action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                         action="#{mapaMentalControlador.respondeMapaMental}"
+                                         styleClass="boton-enviar"/>
                     </h:form>
                 </div>
             </div>
