--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -101,14 +101,14 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="unod" styleClass=""/>
-                                    <h:inputText id="seisd"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"
-                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}">
-                                        <f:validateRequired/>
-                                    </h:inputText>
-                                    <h:message for="seisd" styleClass=""/>
                                 </div>
+                                <h:inputText id="seisd"
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}">
+                                    <f:validateRequired/>
+                                </h:inputText>
+                                <h:message for="seisd" styleClass=""/>
                             </div>
                             <div class="cuadro-hijo2">
                                 <div class="img-hijo2">
@@ -118,6 +118,8 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
+                                </div>
+                                <div>
                                     <h:message for="dosd" styleClass=""/>
                                     <h:inputText id="sieted"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"
@@ -135,6 +137,8 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="tresd" styleClass=""/>
+                                </div>
+                                <div>
                                     <h:inputText id="ochod"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
@@ -151,6 +155,8 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="cuatrod" styleClass=""/>
+                                </div>
+                                <div>
                                     <h:inputText id="nueved"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
@@ -167,6 +173,8 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="cincod" styleClass=""/>
+                                </div>
+                                <div>
                                     <h:inputText id="diezd"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
