--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -60,13 +60,14 @@
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
             </ul>
         </div>
-        <div class="left-nav-wrap  uk-hidden@xl ">
+        <div class="left-nav-wrap uk-position-relative uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
                 <li uk-tooltip="title: #{alumno['dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="60" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['activity']}; pos: right" ><h:link outcome="activities"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="60" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="60" alt=""/></h:link></li>
             </ul>
         </div>
+
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="letra.css"/>
@@ -124,9 +125,9 @@
 
 
                 <div >
-                    <ul class="uk-subnav uk-subnav-pill" uk-switcher="">
+                    <ul class="uk-dotnav uk-flex uk-flex-center" uk-switcher="">
                             <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades" varStatus="contador">
-                                <li ><a href="#" class="boton-enviar">Actividad #{contador.index + 1}</a></li>
+                                <li ><a href="#">Actividad #{contador.index + 1}</a></li>
                             </ui:repeat>
                     </ul>
 
