Muestra el identificador de la actividad

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -89,6 +89,7 @@
                                                 <h:outputText value="#{tareaActvidadModelo.asignacion}">
                                                     <f:convertDateTime locale="en_UK" timeStyle="short" type="both" dateStyle="full"/>
                                                 </h:outputText>
+                                                #{tareaActvidadModelo.idActividad}
                                             </span>
                                         </div>
                                         <div class="uk-width-auto uk-text-right uk-text-muted">
